--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
             <div class="content-section left container">
                 <div>
                     <div>
-                        <p>WebPrefer AB är ett utvecklingsbolag med fokus på spelbranchen. Tillsammans med <a href="http://www.togethergaming.com">Together Gaming</a> och <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> utvecklar vi nästa generations spelplatform för både B2B och B2C.</p>
-                        <p>På WebPrefer är vi idag drygt 15 personer som skapar stora värden för bolaget genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö.</p>
+                        <p>WebPrefer AB är ett utvecklingsbolag med lång erfarenhet inom spelbranchen. Tillsammans med <a href="http://www.togethergaming.com">Together Gaming</a> och <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> utvecklar vi nästa generations spelplatform för både B2B och B2C.</p>
+                        <p>På WebPrefer är vi idag drygt 10 personer som skapar stora värden för bolaget genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö.</p>
                     </div>
                 </div>
                 <div>
@@ -365,14 +365,6 @@
                         <em>Projektledare</em>
                         <a href="mailto:marianne@webprefer.com">marianne@webprefer.com</a>
                     </div>
-                    <div class="employee">
-                        <img original-src="img/js.png" alt="Johan Svensson" />
-                        <h3>Johan<br/>Svensson</h3>
-                        <em>Utvecklare</em>
-                        <a href="mailto:johans@webprefer.com">johans@webprefer.com</a>
-                    </div>
-                </div>
-                <div class="team">
                     <div class="employee">
                         <img original-src="img/default.png" alt="Angela Vallejo" />
                         <h3>Angela<br/>Vallejo</h3>
