--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <div class="content-section left container">
                 <div>
                     <div>
-                        <p>WebPrefer AB är ett utvecklingsbolag med lång erfarenhet inom spelbranchen. Tillsammans med <a href="http://www.togethergaming.com">Together Gaming</a> och <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> utvecklar vi nästa generations spelplatform för både B2B och B2C.</p>
+                        <p>WebPrefer AB är ett utvecklingsbolag med lång erfarenhet inom spelbranchen. Våra kunder inkluderar bland annat <a href="http://www.togethergaming.com">Together Gaming</a>,  <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> och <a href="https://www.znugle.com/">Znugle</a></p>
                         <p>På WebPrefer är vi idag drygt 10 personer som skapar stora värden för bolaget genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö.</p>
                     </div>
                 </div>
