--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
             <div class="content-section left container">
                 <div>
                     <div>
-                        <p>WebPrefer AB är ett utvecklingsbolag med lång erfarenhet inom spelbranchen. Våra kunder inkluderar bland annat <a href="http://www.togethergaming.com">Together Gaming</a>,  <a href="https://www.betharduniverse.com">Bethard Group Ltd</a> och <a href="https://www.znugle.com/">Znugle</a></p>
-                        <p>På WebPrefer är vi idag drygt 10 personer som skapar stora värden för bolaget genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö.</p>
+                        <p>WebPrefer AB är ett utvecklingsbolag med lång erfarenhet av systemutveckling för både stora och små projekt.</p>
+                        <p>Vi idag drygt 5 personer som skapar stora värden för våra kunder genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö.</p>
                     </div>
                 </div>
                 <div>
@@ -350,6 +350,8 @@
                         <a href="mailto:johan@webprefer.com">johan@webprefer.com</a>
                         <a href="tel:0046736965837">(+46) 0736965837</a>
                     </div>
+                </div>
+                <div class="team">
                     <div class="employee">
                         <img original-src="img/cl.png" alt="Catharina Lindberg" />
                         <h3>Catharina<br/>Lindberg</h3>
@@ -357,25 +359,11 @@
                         <a href="mailto:finance@webprefer.com">finance@webprefer.com</a>
                         <a href="tel:0046705509375">(+46) 0705509375</a>
                     </div>
-                </div>
-                <div class="team">
                     <div class="employee">
                         <img original-src="img/mn.png" alt="Marianne van Nouhuys" />
                         <h3>Marianne<br/>van Nouhuys</h3>
                         <em>Projektledare</em>
                         <a href="mailto:marianne@webprefer.com">marianne@webprefer.com</a>
-                    </div>
-                    <div class="employee">
-                        <img original-src="img/default.png" alt="Angela Vallejo" />
-                        <h3>Angela<br/>Vallejo</h3>
-                        <em>Testare</em>
-                        <a href="mailto:angela@webprefer.com">angela@webprefer.com</a>
-                    </div>
-                    <div class="employee">
-                        <img original-src="img/default.png" alt="Rikard Lindgren" />
-                        <h3>Rikard<br/>Lindgren</h3>
-                        <em>Devops</em>
-                        <a href="mailto:rikard@webprefer.com">rikard@webprefer.com</a>
                     </div>
                     <div class="employee">
                         <img original-src="img/default.png" alt="Lina Larsson" />
