--- a/index.html
+++ b/index.html
@@ -330,48 +330,12 @@
                 <h2>Vi är WebPrefer</h2>
                 <div class="team">
                     <div class="employee">
-                        <img original-src="img/aa.png" alt="Alexis Aho" />
-                        <h3>Alexis <br/>Aho</h3>
-                        <em>Partner / Utvecklare</em>
-                        <a href="mailto:alexis@webprefer.com">alexis@webprefer.com</a>
-                        <a href="tel:0046730661467">(+46) 0730661467</a>
-                    </div>
-                    <div class="employee">
                         <img original-src="img/mlc.png" alt="Mikael Lindberg Castell" />
                         <h3>Mikael <br/>Lindberg Castell</h3>
-                        <em>Partner</em>
+                        <em>Founder/Partner</em>
                         <a href="mailto:mikael@webprefer.com">mikael@webprefer.com</a>
                         <a href="tel:0046768935996">(+46) 0768935996</a>
                     </div>
-                    <div class="employee">
-                        <img original-src="img/jg.png" alt="Johan Gustafsson" />
-                        <h3>Johan <br/>Gustafsson</h3>
-                        <em>Partner / Utvecklare</em>
-                        <a href="mailto:johan@webprefer.com">johan@webprefer.com</a>
-                        <a href="tel:0046736965837">(+46) 0736965837</a>
-                    </div>
-                </div>
-                <div class="team">
-                    <div class="employee">
-                        <img original-src="img/cl.png" alt="Catharina Lindberg" />
-                        <h3>Catharina<br/>Lindberg</h3>
-                        <em>Ekonomi / Administration</em>
-                        <a href="mailto:finance@webprefer.com">finance@webprefer.com</a>
-                        <a href="tel:0046705509375">(+46) 0705509375</a>
-                    </div>
-                    <div class="employee">
-                        <img original-src="img/mn.png" alt="Marianne van Nouhuys" />
-                        <h3>Marianne<br/>van Nouhuys</h3>
-                        <em>Projektledare</em>
-                        <a href="mailto:marianne@webprefer.com">marianne@webprefer.com</a>
-                    </div>
-                    <div class="employee">
-                        <img original-src="img/default.png" alt="Lina Larsson" />
-                        <h3>Lina<br/>Larsson</h3>
-                        <em>Testare</em>
-                        <a href="mailto:lina@webprefer.com">lina@webprefer.com</a>
-                    </div>
-                </div>
             </div>
         </section>
 
