--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <div class="content-section left container">
                 <div>
                     <div>
-                        <p>WebPrefer AB är ett utvecklingsbolag med lång erfarenhet av systemutveckling för både stora och små projekt.</p>
+                        <p>WebPrefer is a tech company with vast experience when it comes to technical software solutions of any kind. The last 8+ years, Webprefer has developed an iGaming platform (PAM) for online gaming with top of the class features and a various amount of integrations with different kind of providers (Casino, Sportsbook, Payment etc.) Over these years, the platform has been certified and approved for 5 different regulated markets and has been through a number of technical/security audits through the years.</p>
                         <p>Vi idag drygt 5 personer som skapar stora värden för våra kunder genom att utveckla och implementera nya funktioner, med de senaste tekninkerna. I dagsläget har vi kontor i Växjö.</p>
                     </div>
                 </div>
