--- a/index.html
+++ b/index.html
@@ -339,40 +339,16 @@
             </div>
         </section>
 
-        <section id="wp-career">
-            <header><h1>Karriär <em> Jobba med oss!</em></h1></header>
-
-            <div class="content-section right container">
-                <div>
-                    <p>Vill du följa med oss på vår resa mot att realisera drömmar?<br>Vi söker dig som är driven och vill utmanas.</p>
-                </div>
-                <div>
-                    <img original-src="img/wp.png" alt="work with webprefer">
-                </div>
-            </div>
-
-            <div class="container">
-                <h2>Lediga tjänster</h2>
-                <div class="open-position">
-                    <div>
-                        <p>Vi är alltid på jakt efter drivna utvecklare med erfarenhet inom .Net, React, SQL och liknande. Kontakta oss om du känner att detta passar in på dig</p>
-                    </div>
-                    <div>
-                        <a href="mailto:vaxjo@webprefer.com?subject=Developer application" class="button">Kontakta oss</a>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <footer id="wp-footer">
             <div class="container">
                 <div class="offices">
                     <div class="office">
                         <h3>Kontaktuppgifter</h3>
-                        <p class="adress">Södra Järnvägsgatan 4 A, <br />
-                            352 29 Växjö <br />
+                        <p class="adress">S:t Larsgatan 7, <br />
+                            582 24 Linköping <br />
                             Sweden</p>
-                        <p class="tel"><a href="tel:0046705509375">(+46) 070-550 93 75</a></p>
+                        <p class="tel"><a href="tel:0046768935996">(+46) 076-893 59 96</a></p>
                         <p class="mail"><a href="mailto:vaxjo@webprefer.com">vaxjo@webprefer.com</a></p>
                     </div>
                 </div>
