--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 </div>
             </div>
             <div class="container">
-                <h2>Vi är WebPrefer</h2>
+                <h2>We are WebPrefer</h2>
                 <div class="team">
                     <div class="employee">
                         <img original-src="img/mlc.png" alt="Mikael Lindberg Castell" />
@@ -342,7 +342,7 @@
             <div class="container">
                 <div class="offices">
                     <div class="office">
-                        <h3>Kontaktuppgifter</h3>
+                        <h3>Contact</h3>
                         <p class="adress">S:t Larsgatan 7, <br />
                             582 24 Linköping <br />
                             Sweden</p>
