--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </section>
 
         <section id="wp-about-us">
-            <header><h1>Om oss <em> Who we are?</em></h1></header>
+            <header><h1>About us <em> Who we are?</em></h1></header>
 
             <div class="content-section left container">
                 <div>
@@ -332,7 +332,6 @@
                         <h3>Mikael <br/>Lindberg Castell</h3>
                         <em>Founder</em>
                         <a href="mailto:mikael@webprefer.com">mikael@webprefer.com</a>
-                        <a href="tel:0046768935996">(+46) 0768935996</a>
                     </div>
             </div>
         </section>
