--- a/index.html
+++ b/index.html
@@ -312,12 +312,12 @@
         </section>
 
         <section id="wp-about-us">
-            <header><h1>About us <em> Who we are?</em></h1></header>
+            <header><h1>About us <em> The Forefront of iGaming Innovation</em></h1></header>
 
             <div class="content-section left container">
                 <div>
                     <div>
-                        <p>WebPrefer is a tech company with vast experience when it comes to technical software solutions of any kind. The last 8+ years, Webprefer has developed an iGaming platform (PAM) for online gaming with top of the class features and a various amount of integrations with different kind of providers (Casino, Sportsbook, Payment etc.) Over these years, the platform has been certified and approved for 5 different regulated markets and has been through a number of technical/security audits through the years.</p>
+                        <p>Welcome to WebPrefer! Our 10+ years of experience have positioned us at the forefront of the iGaming industry. We offer a sophisticated Platform Management System (PAM), tailored for the dynamic world of online gaming.</p>
                     </div>
                 </div>
                 <div>
