--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <div class="content-section left container">
                 <div>
                     <div>
-                        <p>Welcome to WebPrefer! Our 10+ years of experience have positioned us at the forefront of the iGaming industry. We offer a sophisticated Platform Management System (PAM), tailored for the dynamic world of online gaming.</p>
+                        <p>Welcome to WebPrefer! Our 10+ years of experience have positioned us at the forefront of the iGaming industry. We offer a sophisticated Platform Management System (PAM) and our "everywhere" restreaming platform, tailored for the dynamic world of online gaming.</p>
                     </div>
                 </div>
                 <div>
