--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
             <div class="content-section left container">
                 <div>
                     <div>
-                        <p>Welcome to WebPrefer! Our 10+ years of experience have positioned us at the forefront of the iGaming industry. We offer a sophisticated Platform Management System (PAM) and our "everywhere" restreaming platform, tailored for the dynamic world of online gaming.</p>
+                        <p>Are you in search of a reliable and experienced tech company that excels in providing top-notch technical software solutions? Look no further than WebPrefer! With over 10+ years of extensive experience, WebPrefer has established itself as a leading authority in the realm of iGaming platforms, boasting a robust and feature-rich Platform Management System (PAM) designed specifically for online gaming.</p>
+                        <p>At WebPrefer, we take pride in our unparalleled expertise in developing iGaming platforms that are second to none. Our platform is equipped with top-of-the-line features and offers seamless integrations with a diverse range of providers including Casino, Sportsbook, Payment, and more.</p>
                     </div>
                 </div>
                 <div>
