--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                         <p>Are you in search of a reliable and experienced tech company that excels in providing top-notch technical software solutions? Look no further than WebPrefer! With over 10+ years of extensive experience, WebPrefer has established itself as a leading authority in the realm of iGaming platforms, boasting a robust and feature-rich Platform Management System (PAM) designed specifically for online gaming.</p>
                         <p>At WebPrefer, we take pride in our unparalleled expertise in developing iGaming platforms that are second to none. Our platform is equipped with top-of-the-line features and offers seamless integrations with a diverse range of providers including Casino, Sportsbook, Payment, and more.</p>
                         <p>Rest assured, our platform has been rigorously certified and approved for operation in 5 different regulated markets, underscoring our commitment to compliance and quality.</p>
+                        <p>Furthermore, our iGaming platform has successfully navigated numerous technical and security audits over the years, ensuring that it meets the highest standards of reliability and security.</p>
                     </div>
                 </div>
                 <div>
