--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </section>
 
         <section id="wp-about-us">
-            <header><h1>The Forefront of iGaming Innovation</h1></header>
+            <header><h1>iGaming Innovations</h1></header>
 
             <div class="content-section left container">
                 <div>
