--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </section>
 
         <section id="wp-about-us">
-            <header><h2><em>iGaming Innovations</em></h2></header>
+            <header><h2>iGaming Innovations</h2></header>
 
             <div class="content-section left container">
                 <div>
