--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                             582 24 Linköping <br />
                             Sweden</p>
                         <p class="tel"><a href="tel:0046768935996">(+46) 076-893 59 96</a></p>
-                        <p class="mail"><a href="mailto:vaxjo@webprefer.com">vaxjo@webprefer.com</a></p>
+                        <p class="mail"><a href="mailto:sales@webprefer.com">vaxjo@webprefer.com</a></p>
                     </div>
                 </div>
                 <p>WebPrefer AB (556748-3523)</p>
