--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="sv-SE">
     <head>
         <title>WebPrefer AB</title>
-        <meta name="description" content="WebPrefer, en utvecklingsbyrå i Växjö." />
+        <meta name="description" content="WebPrefer, Utvecklingsbyrå i Linköping." />
         <link rel="manifest" href="manifest.json" />
         <link rel="shortcut icon" type="image/png" href="img/wp.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
