feat: add contact

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   </p>
                   <div class="mt-10 flex items-center gap-x-6">
                     <a
-                      href="#"
+                      href="#contact"
                       class="rounded-md bg-[#1d6fb9] px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-[#1d6fb9] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[#1d6fb9]"
                       >Contact us</a
                     >
@@ -375,7 +375,7 @@
         </div>
       </div>
     </div>
-    <footer class="bg-white">
+    <footer class="bg-white" id="contact">
       <div
         class="mx-auto max-w-7xl overflow-hidden px-6 py-20 sm:py-24 lg:px-8"
       >
