--- a/index.html
+++ b/index.html
@@ -225,9 +225,10 @@
                 Cutting-Edge iGaming Solutions
               </dt>
               <dd class="mt-1 text-base leading-7 text-gray-600">
-                Discover WebPrefer's advanced iGaming platforms, crafted with
-                over 10 years of expertise, featuring a robust, tailor-made
-                Platform Management System for online gaming excellence.
+                Discover WebPrefer's unrivaled expertise in iGaming platforms. With over 10 years of experience, our certified and robust Player Account Management System (PAM) integrates seamlessly with top gaming services, ensuring top-tier security and market compliance.
+                
+                Adding the anywhere streaming service to this and you'll have the tools to actively work with retention and reactivation of your player base whenever & wherever.
+                
               </dd>
             </div>
             <div>
