--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                     platforms. With over 10 years of experience, our certified
                     and robust Platform Management System integrates seamlessly
                     with top gaming services, ensuring top-tier security and
-                    market compliance.
+                    market compliance.</br></br>
+                    Adding the anywhere streaming service to this and you'll have the tools to actively work with retention and reactivation of your player base whenever & wherever.
                   </p>
                   <div class="mt-10 flex items-center gap-x-6">
                     <a
@@ -226,9 +227,6 @@
               </dt>
               <dd class="mt-1 text-base leading-7 text-gray-600">
                 Discover WebPrefer's unrivaled expertise in iGaming platforms. With over 10 years of experience, our certified and robust Player Account Management System (PAM) integrates seamlessly with top gaming services, ensuring top-tier security and market compliance.
-                
-                Adding the anywhere streaming service to this and you'll have the tools to actively work with retention and reactivation of your player base whenever & wherever.
-                
               </dd>
             </div>
             <div>
