--- a/products/index.html
+++ b/products/index.html
@@ -21,6 +21,11 @@ Worldwide Coverage.
 The platform offers worldwide coverage of market-leading payment
                 solutions, ensuring seamless and secure transactions for players
                 across the globe.
+</dd> </div> <div class="relative pl-9"> <dt class="inline font-semibold text-gray-900"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="absolute left-1 top-1 h-5 w-5 text-indigo-600"><path d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"></path><path d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"></path></svg>
+Crypto Currency.
+</dt> <dd class="inline">
+No matter if you want to offer fiat or crypto or both, the
+                platform covers all of it.
 </dd> </div> </dl> </div> </div> <img src="/casino-game.png" alt="Product screenshot" class="w-[48rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem] md:-ml-4 lg:-ml-0" width="2432" height="1442"> </div> </div> </div> <div class="overflow-hidden bg-white py-24 sm:py-32"> <div class="mx-auto max-w-7xl px-6 lg:px-8"> <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2"> <div class="lg:ml-auto lg:pl-4 lg:pt-4"> <div class="lg:max-w-lg"> <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
 Reporting System
 </p> <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none"> <div class="relative pl-9"> <dt class="inline font-semibold text-gray-900"> <svg class="absolute left-1 top-1 h-5 w-5 text-indigo-600" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-gantt-chart"><rect width="18" height="18" x="3" y="3" rx="2"></rect><path d="M9 8h7"></path><path d="M8 12h6"></path><path d="M11 16h5"></path></svg>
